--- a/src/components/VerticalContent.css
+++ b/src/components/VerticalContent.css
@@ -1,6 +1,6 @@
 
 .content {
-    background-color: #ff0202;
+    background-color: #977e7e;
    
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     
