--- a/src/components_chatting/ChatModal.css
+++ b/src/components_chatting/ChatModal.css
@@ -2,8 +2,7 @@
 /* // src/components/ChatModal.css */
 .chat-modal {
     position: fixed;
-    bottom: 10%;
-    right: 20px;
+    bottom: 0;
     width: 95%;
     height: 250px;
     background-color: rgba(255, 255, 255, 0.8);
@@ -12,12 +11,26 @@
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    z-index: 1000;
-    pointer-events: none;
+    z-index: 999;
+    pointer-events: auto;
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+    .chat-modal {
+        height: 200px;
+    }
+}
+
+@media (max-width: 480px) {
+    .chat-modal {
+        height: 180px;
+    }
 }
 
 .chat-header {
     padding: 15px;
+    height: 1.5vh;
     background-color: rgba(29, 154, 188, 0.9);
     color: white;
     border-radius: 10px 10px 0 0;
@@ -30,7 +43,7 @@
 
 .chat-header h3 {
     margin: 0;
-    font-size: 16px;
+    font-size: 1.5vh;
 }
 
 .close-button {
@@ -112,4 +125,10 @@
 
 .chat-input-form button:hover {
     background-color: rgba(22, 122, 150, 0.9);
+}
+
+.message-sender {
+    font-size: 0.8em;
+    color: #666;
+    margin-bottom: 2px;
 } 
