--- a/src/components/MobileDropdown.css
+++ b/src/components/MobileDropdown.css
@@ -83,7 +83,7 @@
         content: '';
         position: absolute;
         top: 50%;
-        left: 5.5%;
+        left: 3.8vh;
         width: 20px;
         height: 20px;
         background: rgb(255, 255, 255);
