--- a/src/components/Bottom.css
+++ b/src/components/Bottom.css
@@ -1,32 +1,23 @@
 .bottom {
     background-color: #006666;
     color: white;
-    padding: 40px 0 0;
     width: 100%;
     min-height: 300px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     position: relative;
-    height: auto;
-    margin-top: auto;
+    height: 100%;
 }
 
-.bottom-container {
-    width: 100%;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
-    background-color: #006666;
-}
 
 .bottom-content {
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 100%;
+    height: 100%;
+    margin: 0;
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 40px 20px;
     flex-wrap: wrap;
     gap: 40px;
     flex: 1;
