--- a/src/components_chatting/ChatTools.css
+++ b/src/components_chatting/ChatTools.css
@@ -7,9 +7,8 @@
     border-bottom: 1px solid #dee2e6;
     align-items: center;
     position: fixed;
-    top: 70px;
-    left: 0;
-    right: 0;
+    top: 6.5vh;    
+    width: 95%;
     z-index: 999;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
